--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "useWorkspaces": true,
-  "npmClient" : "yarn",
+  "npmClient": "yarn",
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "version": "0.0.1-alpha.0"
 }
