--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hbs/prettier-config",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Hongbusi prettier config",
   "homepage": "https://github.com/Hongbusi/configs",
   "bugs": {
