--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,12 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.1-alpha.0"
+  "command": {
+    "publish": {
+      "ignoreChanges": ["ignored-file", "*.md"],
+      "message": "chore(release): publish",
+      "registry": "https://npm.pkg.github.com"
+    }
+  },
+  "version": "0.0.0"
 }
