--- a/lerna.json
+++ b/lerna.json
@@ -6,10 +6,13 @@
   ],
   "command": {
     "publish": {
-      "ignoreChanges": ["ignored-file", "*.md"],
+      "ignoreChanges": [
+        "ignored-file",
+        "*.md"
+      ],
       "message": "chore(release): publish",
       "registry": "https://npm.pkg.github.com"
     }
   },
-  "version": "0.0.0"
+  "version": "0.0.1-alpha.0"
 }
