--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,7 @@
         "*.md"
       ],
       "message": "chore(release): publish",
-      "registry": "https://npm.pkg.github.com"
+      "registry": "https://registry.npmjs.org/"
     }
   },
   "version": "0.0.1-alpha.0"
