--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hbs/prettier-config",
-  "version": "0.0.2-alpha.0",
+  "version": "0.0.0",
   "description": "Hongbusi prettier config",
   "homepage": "https://github.com/Hongbusi/configs",
   "bugs": {
@@ -20,6 +20,5 @@
   ],
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "86a20ecd4ee1b0721be9e38d9d1549f7d5a58f9a"
+  }
 }
