--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hongbusi/prettier-config",
+  "name": "@hbs/prettier-config",
   "version": "0.0.2-alpha.0",
   "description": "Hongbusi prettier config",
   "homepage": "https://github.com/Hongbusi/configs",
