chore(release): publish

--- a/packages/tailwindcss-config/package.json
+++ b/packages/tailwindcss-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hongbusi/tailwindcss-config",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Hongbusi tailwindcss config.",
   "author": "Hongbusi <q951686662@qq.com>",
   "homepage": "https://github.com/Hongbusi/configs#readme",
