chore(release): publish

--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hongbusi/prettier-config",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "description": "Hongbusi prettier config.",
   "homepage": "https://github.com/Hongbusi/configs",
   "bugs": {
