--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -2,19 +2,38 @@
   "name": "@hongbusi/eslint-config-basic",
   "version": "0.0.0",
   "description": "",
-  "author": "Hongbusi <q951686662@qq.com>",
-  "homepage": "https://github.com/Hongbusi/configs#readme",
   "license": "MIT",
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hongbusi/configs.git"
   },
+  "author": "Hongbusi <q951686662@qq.com>",
+  "homepage": "https://github.com/Hongbusi/configs#readme",
+  "files": [
+    "index.js"
+  ],
+  "main": "index.js",
   "bugs": {
     "url": "https://github.com/Hongbusi/configs/issues"
+  },
+  "scripts": {
+    "lint": "eslint . --config=index.js"
+  },
+  "dependencies": {
+    "eslint-config-standard": "17.0.0-1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsonc": "^2.0.0",
+    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-unicorn": "^40.1.0",
+    "eslint-plugin-yml": "^0.12.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "yaml-eslint-parser": "^0.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0"
   },
   "publishConfig": {
     "access": "public"
