--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -19,6 +19,10 @@
   "bugs": {
     "url": "https://github.com/Hongbusi/configs/issues"
   },
+  "dependencies": {
+    "@hongbusi/eslint-config-ts": "^0.0.0",
+    "eslint-plugin-react": "^7.28.0"
+  },
   "devDependencies": {
     "eslint": "^8.9.0"
   },
