--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -13,11 +13,12 @@
     "index.js"
   ],
   "main": "index.js",
-  "scripts": {
-    "lint": "eslint . --config=index.js"
-  },
   "bugs": {
     "url": "https://github.com/Hongbusi/configs/issues"
+  },
+  "dependencies": {
+    "@hongbusi/eslint-config-ts": "^0.0.0",
+    "eslint-plugin-vue": "^8.4.1"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
