--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,6 +19,9 @@
   "bugs": {
     "url": "https://github.com/Hongbusi/configs/issues"
   },
+  "dependencies": {
+    "@hongbusi/eslint-config-vue": "^0.0.0"
+  },
   "devDependencies": {
     "eslint": "^8.9.0"
   },
