feat: eslint-config

--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "commit": "cz"
+    "commit": "cz",
+    "lint": "npx eslint --ext .js,.json,.vue --fix ."
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@hongbusi/eslint-config": "*",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.4",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "eslint": "^8.9.0"
+  },
+  "eslintConfig": {
+    "extends": "@hongbusi"
   },
   "config": {
     "commitizen": {
