--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/Hongbusi/configs/issues"
   },
   "dependencies": {
-    "@hongbusi/eslint-config-vue": "^0.0.0"
+    "@hongbusi/eslint-config-vue": "^0.0.0",
+    "@hongbusi/eslint-config-react": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
