--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hongbusi/eslint-config",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "license": "MIT",
   "repository": {
@@ -31,12 +31,12 @@
     "eslint-plugin-jsonc": "^2.0.0",
     "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-unicorn": "^40.1.0",
+    "eslint-plugin-vue": "^8.4.1",
     "eslint-plugin-yml": "^0.12.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "yaml-eslint-parser": "^0.5.0",
-    "eslint-plugin-vue": "^8.4.1",
-    "eslint-plugin-react": "^7.28.0"
+    "yaml-eslint-parser": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
