--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.10.0",
     "husky": "^7.0.4",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "typescript": "^4.6.2"
   },
   "eslintConfig": {
     "extends": "@hongbusi"
