feat: update basic

--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -3,34 +3,17 @@
   "version": "0.1.2",
   "description": "",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hongbusi/configs.git"
-  },
-  "author": "Hongbusi <q951686662@qq.com>",
-  "homepage": "https://github.com/Hongbusi/configs#readme",
+  "author": "Hongbusi",
   "files": [
     "index.js"
   ],
   "main": "index.js",
-  "bugs": {
-    "url": "https://github.com/Hongbusi/configs/issues"
-  },
   "scripts": {
     "lint": "eslint . --config=index.js"
   },
   "dependencies": {
     "eslint-config-standard": "17.0.0-1",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsonc": "^2.2.1",
-    "eslint-plugin-n": "^15.0.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-unicorn": "^41.0.0",
-    "eslint-plugin-yml": "^0.14.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "yaml-eslint-parser": "^0.5.0"
+    "eslint-plugin-import": "^2.25.4"
   },
   "devDependencies": {
     "eslint": "^8.10.0"
