--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepare": "husky install",
     "commit": "cz",
-    "lint": "npx eslint --ext .js,.ts,.json,.vue --fix ."
+    "lint": "npx eslint --ext .js,.ts,.vue ."
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
