--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "eslint-config-standard": "17.0.0-1",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^15.0.1",
+    "eslint-plugin-promise": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^8.10.0"
