--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hongbusi/eslint-config",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "license": "MIT",
   "repository": {
@@ -20,16 +20,16 @@
     "url": "https://github.com/Hongbusi/configs/issues"
   },
   "dependencies": {
-    "@hongbusi/eslint-config-react": "^0.2.0",
-    "@hongbusi/eslint-config-vue": "^0.2.0",
+    "@hongbusi/eslint-config-react": "^0.2.1",
+    "@hongbusi/eslint-config-vue": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint-config-standard": "17.0.0-1",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-vue": "^8.5.0",
     "eslint-plugin-n": "^15.0.1",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-vue": "^8.5.0"
   },
   "devDependencies": {
     "eslint": "^8.10.0"
