--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
+  "name": "@antfu/eslint-config-monorepo",
+  "version": "0.25.2",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "packageManager": "pnpm@7.1.0",
+  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "license": "MIT",
   "scripts": {
-    "prepare": "husky install",
-    "commit": "cz",
-    "lint": "npx eslint --ext .js,.ts,.vue .",
-    "publish": "lerna publish"
+    "lint": "eslint .",
+    "prepare": "pnpm -r run stub",
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@commitlint/cli": "16.2.4",
-    "@commitlint/config-conventional": "16.2.4",
-    "@hongbusi/eslint-config": "*",
-    "commitizen": "4.2.4",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.14.0",
-    "husky": "7.0.4",
-    "lerna": "4.0.0",
-    "typescript": "4.6.4"
-  },
-  "eslintConfig": {
-    "extends": "@hongbusi"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "@antfu/eslint-config": "*",
+    "bumpp": "^7.1.1",
+    "eslint": "^8.16.0",
+    "eslint-plugin-antfu": "workspace:*",
+    "typescript": "^4.7.2"
   }
 }
