--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@antfu/eslint-config-monorepo",
-  "version": "0.25.2",
+  "name": "@hongbusi/eslint-config-monorepo",
+  "version": "0.2.2",
   "private": true,
   "packageManager": "pnpm@7.1.0",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "Hongbusi",
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
@@ -11,10 +11,10 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "*",
+    "@hongbusi/eslint-config": "*",
     "bumpp": "^7.1.1",
     "eslint": "^8.16.0",
-    "eslint-plugin-antfu": "workspace:*",
+    "eslint-plugin-hongbusi": "workspace:*",
     "typescript": "^4.7.2"
   }
 }
