chore: update package.json

--- a/packages/eslint-plugin-antfu/package.json
+++ b/packages/eslint-plugin-antfu/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eslint-plugin-antfu",
-  "version": "0.25.2",
+  "name": "eslint-plugin-hongbusi",
+  "version": "0.2.2",
   "license": "MIT",
-  "homepage": "https://github.com/antfu/eslint-config",
+  "homepage": "https://github.com/hongbusi/eslint-config",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
