--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config",
-  "version": "0.25.2",
-  "description": "Anthony's ESLint config",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "name": "@hongbusi/eslint-config",
+  "version": "0.2.2",
+  "description": "Hongbusi's ESLint config.",
+  "author": "Hongbusi",
   "license": "MIT",
-  "homepage": "https://github.com/antfu/eslint-config",
+  "homepage": "https://github.com/hongbusi/eslint-config",
   "keywords": [
     "eslint-config"
   ],
@@ -16,8 +16,8 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@antfu/eslint-config-react": "workspace:*",
-    "@antfu/eslint-config-vue": "workspace:*",
+    "@hongbusi/eslint-config-react": "workspace:*",
+    "@hongbusi/eslint-config-vue": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
