--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config-basic",
-  "version": "0.25.2",
+  "name": "@hongbusi/eslint-config-basic",
+  "version": "0.2.2",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "Hongbusi",
   "license": "MIT",
-  "homepage": "https://github.com/antfu/eslint-config",
+  "homepage": "https://github.com/hongbusi/eslint-config",
   "keywords": [
     "eslint-config"
   ],
@@ -19,7 +19,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "eslint-plugin-antfu": "workspace:*",
+    "eslint-plugin-hongbusi": "workspace:*",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-import": "^2.26.0",
