--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config-ts",
-  "version": "0.25.2",
+  "name": "@hongbusi/eslint-config-ts",
+  "version": "0.2.2",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "Hongbusi",
   "license": "MIT",
-  "homepage": "https://github.com/antfu/eslint-config",
+  "homepage": "https://github.com/hongbusi/eslint-config",
   "keywords": [
     "eslint-config"
   ],
@@ -17,7 +17,7 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@antfu/eslint-config-basic": "workspace:*",
+    "@hongbusi/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0"
   },
