--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@antfu/eslint-config-vue",
-  "version": "0.25.2",
+  "name": "@hongbusi/eslint-config-vue",
+  "version": "0.2.2",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "Hongbusi",
   "license": "MIT",
   "keywords": [
     "eslint-config"
@@ -15,7 +15,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@antfu/eslint-config-ts": "workspace:*",
+    "@hongbusi/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^9.0.1"
   },
   "devDependencies": {
